Fixed z-index for Mailchimp over nav

--- a/site.css
+++ b/site.css
@@ -138,6 +138,7 @@ li {
   padding: 0px 0px 28px 0px;
   box-sizing: border-box;
   order: 99;
+  z-index: 99;
 }
 
 .listnav a {
@@ -196,21 +197,10 @@ li {
   overflow: hidden;
 }
 
-/*.buffer {
-    
-    box-sizing: border-box;
-    background-color: none;
-    width: 100%;
-    height: 80px;
-    margin: 0px;
-    padding: 0px;
-    
-}*/
-
 .buffer {
     position: relative;
     border-top: 52px solid transparent;
-    margin: -70px 0 0;
+    margin: -60px 0 0;
    -webkit-background-clip: padding-box;
    -moz-background-clip: padding;
    background-clip: padding-box;
